[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keel-core-stub"
version = "0.1.1"
description = "In-memory fake keel-core for front-end development (Sprint 0 contract artifact)."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["keel_core_stub*"]
