[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
# Published as `keelrun` (docs/naming-decision.md); the IMPORT name stays
# `keel` (see [tool.hatch.build.targets.wheel] below) — only the PyPI
# distribution name changes.
name = "keelrun"
license = "Apache-2.0"
version = "0.4.1"
description = "Keel — resilience as a zero-config Python front end (Tier 1 bootstrap, import hook, discovery)."
requires-python = ">=3.11"
# The native core wheel (import name `keel_core`, distribution name
# `keelrun-core`), version-locked to this front end. When it is absent at
# runtime (exotic platform, failed install), the vendored pure-Python stub
# (`keel_core_stub`, shipped in this wheel and byte-identical to
# python/keel-core-stub — checked by scripts/check-release-metadata.sh) takes
# over, so there is never a compile. Beyond that, runtime is stdlib-only:
# adapters activate only when their library is already present in the
# environment, and never import an absent one.
dependencies = ["keelrun-core==0.4.1"]

# Test-only dependencies (the adapter contract-test farm). Install with
# `pip install -e '.[dev]'` or `uv pip install httpx requests`. The library
# versions the packs certify are pinned in each pack's `_PINNED`; these ranges
# track them. Development for Task 10 used httpx 0.28.1 + requests 2.32.5 on
# CPython 3.14 (system interpreter).
[project.optional-dependencies]
dev = ["httpx>=0.27,<0.29", "requests>=2.31,<2.33"]

# Internal run entry. The public `keel run` CLI (Task 8) dispatches here for
# Python entrypoints; `keelrun-py-run app.py [args...]` runs a script directly.
[project.scripts]
keelrun-py-run = "keel._run:main_run_entry"

[tool.hatch.build.targets.wheel]
# Also picks up the vendored `keel_core_stub` fallback (see above).
packages = ["src/keel", "src/keel_core_stub"]

[tool.hatch.build.targets.wheel.force-include]
"keelrun_activate.pth" = "keelrun_activate.pth"

[tool.hatch.build.targets.sdist]
include = ["src", "keelrun_activate.pth", "README.md", "pyproject.toml"]
